big refactoring. cleaned up the checkers